fix: code title overlap when pre is wrapped by CodeBlock div

--- a/packages/template/app/styles/prism.css
+++ b/packages/template/app/styles/prism.css
@@ -336,6 +336,7 @@ pre[class*="language-"] > code[class*="language-"] {
   margin-bottom: -37px;
 }
 
-.rehype-code-title + pre[class*="language-"] {
+.rehype-code-title + pre[class*="language-"],
+.rehype-code-title + div > pre[class*="language-"] {
   padding-top: 53px;
 }
